--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 
 <body>
   <h1>Latihan Github</h1>
-  <h3>Ini tulisan yang ditambah di local</h3>
+  <h3>Sebelumnya di clone dulu ke local, lalu di push ke github</h3>
+  <p>ini tambahan pada commit selanjutnya</p>
 
 </body>
 
