tambah file index 2

--- a/index.html
+++ b/index.html
@@ -12,6 +12,18 @@
   <h3>Sebelumnya di clone dulu ke local, lalu di push ke github</h3>
   <p>ini tambahan pada commit selanjutnya</p>
 
+  <h4>Langkah Latihan Github versi 1</h4>
+  <ol>
+    <li>login github</li>
+    <li>buat Repository baru dengan menceklis Readme</li>
+    <li>Buka VS Code</li>
+    <li>install extension yg berkaitang dengan github</li>
+    <li>login akun github di VS Code</li>
+    <li>Lakukan clone repository dari Github</li>
+  </ol>
+
+  <h4>Untuk langkah github <a href="index2.html">versi 2</a></h4>
+
 </body>
 
 </html>
