--- a/index2.html
+++ b/index2.html
@@ -16,6 +16,7 @@
     <li>buat folder project di lokal beserta file2 kerjaan</li>
     <li>di extension Source Control Push ke folder repository yg baru</li>
     <li>masukan pesan Commit lalu klik komit</li>
+    <li>jangan lupa syncrocize</li>
   </ol>
 
   <h5>Back to <a href="index.html">versi 1</a></h5>
